Correct ligature spacing in site title. Fixes #36

--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -47,6 +47,7 @@ $bg
 		font-size rem(30px)
 		line-height 1
 		display block
+		font-variant-ligatures none 
 		letter-spacing 9px
 		+above(cut)
 			letter-spacing 16px
